# CPP5_3DViewer_v2

./: .gitignore  CMakeLists.txt
materials/: instructions_for_testing_rus.md
src/: 3dViewer.pro  Makefile  main.cc  readme.txt
src/controllers/: controller.cc  controller.h
src/models/: glwidget.cc  glwidget.h  parse.cc  parse.h
src/patterns/: application_comands.cc  application_comands.h  application_facade.cc  application_facade.h  application_strategy.cc  application_strategy.h
src/tests/: test.cc
src/views/: gif.h  mainwindow.cc  mainwindow.h  mainwindow.ui
